--- a/release-notes.txt
+++ b/release-notes.txt
@@ -1,1 +1,1 @@
-Welcome to myAyaHub. We update the app as often as possible to make it faster and more reliable for you. In case of any feedback, please contact us via feedback@healthcloud.co.ke
+Welcome to myAyaHub. We update the app as often as possible to make it faster and more reliable for you. In case of any feedback, please contact us via mycarehub@savannahghi.org
