chore: rename instances of bewell
- rename bewell instances to myafyahub

Signed-off-by: Byron Kimani <byronkimani@gmail.com>

--- a/release-notes.txt
+++ b/release-notes.txt
@@ -1,2 +1,2 @@
-Welcome to myAyaHub. We update the app as often as possible to make it faster and more reliable for you. In case of any feedback, please contact us via mycarehub@savannahghi.org
+Welcome to myAfyaHub. We update the app as often as possible to make it faster and more reliable for you. In case of any feedback, please contact us via mycarehub@savannahghi.org
 
